[gd_scene load_steps=9 format=2]

[ext_resource path="res://models/kitchen/kitchenStove.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/kitchen/kitchenSink.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/kitchen/fridge.tscn" type="PackedScene" id=3]
[ext_resource path="res://models/kitchen/cabinetUpper.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/kitchen/cabinetDrawer.tscn" type="PackedScene" id=5]
[ext_resource path="res://models/bathroom/secretBoxWithCode.tscn" type="PackedScene" id=6]
[ext_resource path="res://rooms/kitchen.gd" type="Script" id=7]
[ext_resource path="res://models/kitchen/toaster.tscn" type="PackedScene" id=8]

[node name="kitchen" type="Spatial"]
script = ExtResource( 7 )

[node name="fridge" parent="." instance=ExtResource( 3 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 19.6708, 0, -1.8648 )

[node name="kitchenStove" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 19.1854, 0, 1.04654 )

[node name="kitchenSink" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 19.1854, 0, 3.59755 )

[node name="cabinetDrawer" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 19.1857, 0, 2.32877 )

[node name="cabinetDrawer4" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 19.1857, 0, 6.18171 )

[node name="cabinetDrawer2" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 19.1857, 0, 4.88177 )

[node name="secretBoxWithCode" parent="cabinetDrawer2" instance=ExtResource( 6 )]
transform = Transform( 0.0514151, 0, 0.0475026, 0, 0.07, 0, -0.0475026, 0, 0.0514151, 0.213623, 0.444795, 0.20093 )
rightCode = [ 2, 5, 1, 3 ]

[node name="cabinetDrawer3" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 19.1857, 0, -0.283904 )

[node name="cabinetUpper" parent="." instance=ExtResource( 4 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 20.1091, 1.838, -0.283644 )

[node name="cabinetUpper2" parent="." instance=ExtResource( 4 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 20.1091, 1.838, 2.34651 )

[node name="cabinetUpper3" parent="." instance=ExtResource( 4 )]
transform = Transform( -1.31134e-07, 0, 3, 0, 3, 0, -3, 0, -1.31134e-07, 20.1091, 1.838, 3.64904 )

[node name="toaster" parent="." instance=ExtResource( 8 )]
transform = Transform( -1.8181, -0.0517659, -2.38576, 0, 2.99929, -0.0650782, 2.38632, -0.0394394, -1.81766, 19.851, 1.26, -1.0166 )
[connection signal="gotoSecretBoxZoom" from="cabinetDrawer2/secretBoxWithCode" to="." method="_on_secretBoxWithCode_gotoSecretBoxZoom"]
